--- a/init.org
+++ b/init.org
@@ -117,24 +117,25 @@ This variable tells Emacs to prefer the =.el= file if it's newer, even if there 
 - use resize-window
 
 #+BEGIN_SRC emacs-lisp
-    (use-package resize-window
-      :bind
-      ("C-c ;" . resize-window)
-      ("C-c C-;" . resize-window)
-      :config
-      (add-hook 'org-mode-hook
-                (lambda ()
-                  (bind-key "C-c ;" 'resize-window org-mode-map)))
-      (resize-window-add-choice ?l #'ivy-switch-buffer "Switch buffers with ivy")
-      (resize-window-add-choice ?a #'counsel-git "Search git files")
-      (resize-window-add-choice ?h (lambda () (dired "~/projects/clojure"))
-                                "Visit the clojure directory")
-      (resize-window-add-choice ?u (lambda () (dired "~/ops/projects"))
-                                "Work projects")
-      (resize-window-add-choice ?d (lambda () (dired "~/projects/dev"))
-                                "Visit dev directoryq")
-      (resize-window-add-choice ?m (lambda () (resize-window--window-push))
-                                "Push window state onto window stack"))
+  (use-package resize-window
+    :bind
+    ("C-c ;" . resize-window)
+    ("C-c C-;" . resize-window)
+    :config
+    (add-hook 'org-mode-hook
+              (lambda ()
+                (bind-key "C-c ;" 'resize-window org-mode-map)))
+    (setq resize-window-swap-capital-and-lowercase-behavior t)
+    (resize-window-add-choice ?l #'ivy-switch-buffer "Switch buffers with ivy")
+    (resize-window-add-choice ?a #'counsel-git "Search git files")
+    (resize-window-add-choice ?h (lambda () (dired "~/projects/clojure"))
+                              "Visit the clojure directory")
+    (resize-window-add-choice ?u (lambda () (dired "~/ops/projects"))
+                              "Work projects")
+    (resize-window-add-choice ?d (lambda () (dired "~/projects/dev"))
+                              "Visit dev directoryq")
+    (resize-window-add-choice ?m (lambda () (resize-window--window-push))
+                              "Push window state onto window stack"))
 #+END_SRC
 
 - turn off the stupid system bell
