Shuffle lsp-mode config

--- a/init.org
+++ b/init.org
@@ -696,13 +696,15 @@ Use lsp-mode with the excellent lsp-clojure package.
 #+BEGIN_SRC emacs-lisp
   (use-package lsp-mode
     :init
-    (require 'lsp-clojure)
     (setq lsp-clojure-server-command '("bash" "-c" "cd ~/projects/clojure/clojure-lsp && lein run"))
     (setq lsp-enable-indentation nil)
     ;; (setq indent-region-function #'clojure-indent-function)
     (add-hook 'clojure-mode-hook #'lsp)
     (add-hook 'clojurec-mode-hook #'lsp)
-    (add-hook 'clojurescript-mode-hook #'lsp))
+    (add-hook 'clojurescript-mode-hook #'lsp)
+    :config
+    (require 'lsp-clojure)
+    (require 'lsp-clojure-hydra))
 
 #+END_SRC
 
