--- a/init.org
+++ b/init.org
@@ -782,7 +782,14 @@ Var to check that we are on the work machine
 
     (personal/set-font))
 #+END_SRC
-*** TODO
+
+*** Ligatures
+
+set ligatures on work machine since its osx and its easy
+
+#+BEGIN_SRC emacs-lisp
+  (mac-auto-operator-composition-mode)
+#+END_SRC
 ** Linux machine
 
 are we on that machine?
