Fixup completion in CIDER
few issues:
- CIDER uses dumb completion in the repl for some reason. Need to use
'company-indent-or-complete-common' as the 'cider-repl-tab-command'
- set TAB to be ("TAB" . company-indent-or-complete-common)
globally.

Was having interesting issue: autocomplete at the repl sucked, but if
invoking company-complete-common manually it worked fine. However, was
getting no completion in source buffers just a "no completions found"
error. Still not exactly sure why this solved that but cargo cults
abound. Possible it had to do with the capf cache and it gets really
hairy in there at that point.

Also added a package to show the docstrings in company autocomplete.

--- a/init.org
+++ b/init.org
@@ -392,8 +392,17 @@ very convenient package from bbatsov
 #+BEGIN_SRC emacs-lisp
   (use-package company
     :diminish company-mode
+    :bind ("TAB" . company-indent-or-complete-common)
     :hook
     (after-init . global-company-mode))
+#+END_SRC
+
+#+BEGIN_SRC emacs-lisp
+  (use-package company-quickhelp
+    :init (company-quickhelp-mode)
+    :config
+    (setq company-quickhelp-use-propertized-text t)
+    (setq company-quickhelp-delay 0.2))
 #+END_SRC
 
 ** Neotree/sidebar
@@ -690,6 +699,7 @@ Clojure mode and CIDER are dev versions locally
     (setq cider-show-error-buffer nil)
     (setq cider-repl-display-help-banner nil)
     (setq cider-repl-pop-to-buffer-on-connect 'display-only)
+    (setq cider-repl-tab-command #'company-indent-or-complete-common)
     :bind (:map
            cider-repl-mode-map
            ("RET" . cider-repl-newline-and-indent)
