Pdf toosl keybindings and buttercup

--- a/init.org
+++ b/init.org
@@ -506,6 +506,20 @@ Use undo tree
   (bind-key "C--" 'text-scale-decrease)
 #+END_SRC
 
+* Pdf
+
+#+BEGIN_SRC emacs-lisp
+  (use-package pdf-tools
+    :demand t
+    :config
+    (require 'pdf-tools)
+    (require 'pdf-view)
+    :bind (:map pdf-view-mode-map
+                ("j" . pdf-view-next-line-or-next-page)
+                ("k" . pdf-view-previous-line-or-previous-page)
+                ("h" . image-backward-hscroll)
+                ("l" . image-forward-hscroll)))
+#+END_SRC
 * Org
 
 ** Initial setup
@@ -677,6 +691,7 @@ Get the dependencies for cider
   (use-package seq)
   (use-package sesman)
   (use-package flycheck-joker)
+  (use-package buttercup)
 #+END_SRC
 
 
@@ -729,7 +744,10 @@ Use lsp-mode with the excellent lsp-clojure package.
     (add-hook 'clojurec-mode-hook #'lsp)
     (add-hook 'clojurescript-mode-hook #'lsp)
     :config
-    (require 'lsp-clojure))
+    (require 'lsp-clojure)
+    (add-to-list 'lsp-language-id-configuration '(clojure-mode . "clojure"))
+    (add-to-list 'lsp-language-id-configuration '(clojurec-mode . "clojure"))
+    (add-to-list 'lsp-language-id-configuration '(clojurescript-mode . "clojurescript")))
 #+END_SRC
 
 Use the hydra I cooked up recently
