--- a/init.org
+++ b/init.org
@@ -761,6 +761,12 @@ Use the hydra I cooked up recently
            cider-mode-map
            ("C-c C-l" . lsp-clojure-refactor-menu/body)))
 #+END_SRC
+** Rust
+
+#+BEGIN_SRC emacs-lisp
+  (use-package rust-mode)
+  (use-package racer)
+#+END_SRC
 * Machine Configs
 ** Work
 
