--- a/init.org
+++ b/init.org
@@ -832,16 +832,15 @@ Var to check that we are on the work machine
     (personal/set-font))
 #+END_SRC
 
-*** Ligatures
+*** TODO Ligatures
 
 Switch away from ligatures hoping to diagnose some memory woes on osx. Need that sweet sweet shell though
 
 #+BEGIN_SRC emacs-lisp
-  (when personal/work-machine
-    (use-package exec-path-from-shell
-      :demand t
-      :init
-      (exec-path-from-shell-initialize)))
+  (use-package exec-path-from-shell
+    :demand t
+    :init
+    (exec-path-from-shell-initialize))
 #+END_SRC
 
 *** Random assorteds
