Update highlight line to not be green for some reason

--- a/init.org
+++ b/init.org
@@ -341,8 +341,10 @@ Turn off the quite ugly ui chrome
   (use-package darktooth-theme)
   (use-package kaolin-themes)
   (use-package sublime-themes)
+
   (use-package gruvbox-theme)
   (load-theme 'brin)
+  (setq hl-line-face '((t :background "#3d424d")))
 #+end_src
 
 
