Make dofor indent like macro

--- a/init.org
+++ b/init.org
@@ -708,32 +708,34 @@ Clojure mode and CIDER are dev versions locally
 
 #+BEGIN_SRC emacs-lisp
 
-  (use-package clojure-mode
-    :load-path "~/projects/dev/clojure-mode"
-    :config
-    (setq clojure-toplevel-inside-comment-form t)
-    (setq clojure-indent-style 'align-arguments))
+    (use-package clojure-mode
+      :load-path "~/projects/dev/clojure-mode"
+      :config
+      (setq clojure-toplevel-inside-comment-form t)
+      (setq clojure-indent-style 'align-arguments)
+      (put-clojure-indent 'dofor 1))
 
-  (use-package cider
-    :load-path "~/projects/dev/cider/"
-    :init
-    (load "cider-autoloads" t t)
-    :config
-    (setq cider-invert-insert-eval-p t)
-    (setq cider-switch-to-repl-after-insert-p nil)
-    (setq cider-switch-to-repl-on-insert-p nil)
-    (setq cider-font-lock-dynamically t)
-    (setq cider-show-error-buffer nil)
-    (setq cider-repl-display-help-banner nil)
-    (setq cider-repl-pop-to-buffer-on-connect 'display-only)
-    (setq cider-repl-tab-command #'company-indent-or-complete-common)
-    :bind (:map
-           cider-repl-mode-map
-           ("RET" . cider-repl-newline-and-indent)
-           ("C-j" . cider-repl-return)
-           :map
-           paredit-mode-map
-           ("C-j" . cider-repl-return)))
+    (use-package cider
+      :load-path "~/projects/dev/cider/"
+      :init
+      (load "cider-autoloads" t t)
+      :config
+      (setq cider-invert-insert-eval-p t)
+      (setq cider-switch-to-repl-after-insert-p nil)
+      (setq cider-switch-to-repl-on-insert-p nil)
+      (setq cider-font-lock-dynamically t)
+      (setq cider-show-error-buffer nil)
+      (setq cider-repl-display-help-banner nil)
+      (setq cider-repl-pop-to-buffer-on-connect 'display-only)
+      (setq cider-repl-tab-command #'company-indent-or-complete-common)
+      :bind (:map
+             cider-repl-mode-map
+             ("RET" . cider-repl-newline-and-indent)
+             ("C-j" . cider-repl-return)
+             :map
+             paredit-mode-map
+             ("C-j" . cider-repl-return))
+  )
 #+END_SRC
 
 ****  tooltip for doc stuff
